# tauri-template

.github/workflows/: rust-build.yml
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src-tauri/src/utils/: mod.rs  num.rs
src/components/: Greet.tsx  Main.tsx
src/components/AppProvider/: GlobalInject.tsx
