[package]
name = "tauri-template"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = [ "dialog-all", "shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ril = { version = "0.10.1", features = ["all"] }
essi-ffmpeg = "0.2.0"
ffmpeg-cli = "0.1.0"
ffmpeg-sidecar = "1.1.0"
ffmpeg-next = "7.0.4"
regex = "1.10.6"
rust_decimal = "1.35.0"


[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
